<resources>
    <string name="app_name">PizzaDeliveryApp</string>
    <string name="customer_info">Customer Information</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="street">Street</string>
    <string name="city">City</string>
    <string name="province">Province</string>
    <string name="postal_code">Postal Code</string>
    <string name="pizza_detail">Pizza Details</string>
    <string name="pizza_number">Number of Pizzas</string>
    <string name="pizza">Pizza</string>
    <string name="size">Size</string>
    <string name="condiments">Condiments</string>
    <string name="submit">Submit</string>

    <string-array name="province_arrays">
        <item>-Choose a Province-</item>
        <item>AB</item>
        <item>BC</item>
        <item>MB</item>
        <item>NB</item>
        <item>NL</item>
        <item>NS</item>
        <item>NT</item>
        <item>NU</item>
        <item>ON</item>
        <item>PE</item>
        <item>QC</item>
        <item>SK</item>
        <item>YT</item>
    </string-array>

    <string-array name="number_of_pizzas">
        <item>-Choose Number of Pizzas-</item>
        <item>One</item>
        <item>Two</item>
        <item>Three</item>
    </string-array>

    <string-array name="condiment_arrays">
        <item>-Choose Condiment-</item>
        <item>Mushroom</item>
        <item>Pepperoni</item>
    </string-array>

    <string-array name="pizza_size_arrays">
        <item>-Choose Pizza Size-</item>
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
    </string-array>


</resources>
